# biketheft_berlin

./: .gitignore  README.md  download-bike-theft-data.sh  etl_web_to_gcs-deployment.yaml  explore-data.ipynb  pyproject.toml
.github/workflows/: gh_actions.yml
berlin_bike_theft/: dbt_project.yml
berlin_bike_theft/models/core/: fact_theft_reports.sql  schema.yml
berlin_bike_theft/models/staging/: schema.yml  stg_berlin_lor_geo.sql  stg_theft_reports_archived.sql  stg_theft_reports_daily.sql
berlin_bike_theft/seeds/: berlin_bezirke.csv  seeds_properties.yml
data/mappings/: berlin_bezirke.csv
flows/: extract_web-to-gcs.py  load_gcs-to-bq.py  setup.py
